--- a/GCN_test.ipynb
+++ b/GCN_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "e143d077",
    "metadata": {},
    "outputs": [],
@@ -18,19 +18,20 @@
     "from torch.nn import Linear\n",
     "import torch.nn.functional as F\n",
     "from torch_geometric.nn import GCNConv\n",
-    "from torch_geometric.nn import global_mean_pool\n"
+    "from torch_geometric.nn import global_mean_pool\n",
+    "import awkward as ak\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "e90f02b3-2dd7-48e1-97e5-cdc68b484615",
    "metadata": {},
    "outputs": [],
    "source": [
     "rng = np.random.default_rng(187)\n",
     "\n",
-    "num_graphs = 256\n",
+    "num_graphs = 2#256\n",
     "upper_limit = 30\n",
     "\n",
     "graphsizes = rng.random((num_graphs))*upper_limit + 10\n",
@@ -39,32 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "6ac11bc2-39c7-4094-9a67-823a654ba84a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17, 20, 25, 19, 35, 27, 30, 14, 24, 11, 30, 24, 38, 36, 15, 31, 25,\n",
-       "       29, 31, 33, 23, 17, 21, 31, 12, 30, 15, 17, 10, 28, 21, 17, 25, 18,\n",
-       "       36, 27, 19, 13, 20, 10, 27, 13, 33, 34, 12, 21, 27, 14, 36, 12, 20,\n",
-       "       33, 15, 22, 17, 32, 33, 26, 23, 35, 29, 24, 34, 39, 26, 35, 37, 15,\n",
-       "       34, 16, 34, 26, 14, 35, 37, 17, 21, 31, 31, 22, 17, 19, 20, 39, 35,\n",
-       "       21, 32, 33, 24, 23, 22, 38, 11, 30, 13, 18, 14, 23, 28, 36, 13, 15,\n",
-       "       38, 22, 35, 29, 33, 16, 26, 12, 34, 26, 11, 12, 37, 15, 28, 22, 31,\n",
-       "       17, 24, 12, 32, 32, 18, 18, 20, 16, 28, 32, 38, 32, 10, 29, 37, 10,\n",
-       "       17, 27, 25, 28, 36, 17, 31, 34, 21, 19, 36, 27, 35, 12, 18, 21, 27,\n",
-       "       37, 36, 10, 16, 35, 26, 32, 11, 20, 23, 27, 20, 14, 16, 18, 21, 31,\n",
-       "       34, 17, 15, 28, 35, 22, 15, 21, 26, 18, 12, 25, 30, 32, 13, 15, 30,\n",
-       "       16, 15, 30, 34, 33, 27, 24, 28, 14, 37, 33, 25, 23, 13, 26, 27, 12,\n",
-       "       27, 27, 13, 30, 19, 23, 37, 11, 39, 17, 33, 22, 26, 33, 24, 11, 21,\n",
-       "       23, 31, 30, 27, 17, 20, 27, 14, 33, 23, 36, 25, 17, 18, 27, 37, 31,\n",
-       "       24, 11, 21, 16, 32, 14, 25, 35, 37, 36, 31, 29, 17, 16, 34, 23, 18,\n",
-       "       35])"
+       "array([17, 20])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,32 +61,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "0b4d6537-a071-4f14-8ec9-b7f57b28857a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[0.50497268, 0.30376072, 0.85254749, 0.57692297, 0.68358927,\n",
+      "        0.15151507, 0.49460399, 0.04493635, 0.68163249, 0.49044509,\n",
+      "        0.93487639, 0.87493527, 0.1746896 , 0.71353164, 0.51161851,\n",
+      "        0.65875606, 0.70929701],\n",
+      "       [0.77012013, 0.45871582, 0.26598679, 0.38547232, 0.73055938,\n",
+      "        0.07995353, 0.69977181, 0.16971805, 0.23736594, 0.01595557,\n",
+      "        0.63068865, 0.39782817, 0.24694307, 0.53156348, 0.28152274,\n",
+      "        0.87072021, 0.59166661]]), array([[0.30785326, 0.12736179, 0.36090577, 0.02132952, 0.59150147,\n",
+      "        0.10069786, 0.76869805, 0.82284753, 0.08082336, 0.3756163 ,\n",
+      "        0.59513113, 0.14044215, 0.89240386, 0.09276061, 0.36173728,\n",
+      "        0.77931311, 0.19904609, 0.41583237, 0.24547304, 0.74239643],\n",
+      "       [0.7994411 , 0.54647538, 0.44602289, 0.83827665, 0.6641264 ,\n",
+      "        0.46888605, 0.80402179, 0.96720156, 0.55659944, 0.83670978,\n",
+      "        0.91504787, 0.18519766, 0.83188091, 0.22132845, 0.82040497,\n",
+      "        0.5355099 , 0.1511573 , 0.85639094, 0.92068853, 0.26341376]])]\n"
+     ]
+    }
+   ],
    "source": [
     "# make node features and labels\n",
     "node_features = []\n",
     "for size in graphsizes:\n",
-    "    node_features.append(rng.random((2, size)))"
+    "    node_features.append(rng.random((2, size)))\n",
+    "    \n",
+    "print(node_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "id": "f47e171b-451f-4e2a-b5b9-235e381f0bed",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "only one element tensors can be converted to Python scalars",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_140294/2708391360.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mnode_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0medges\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mknn_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_edges\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mnode_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: only one element tensors can be converted to Python scalars"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2 2\n",
+      "[tensor([[ 6,  4, 12, 14, 11,  8, 14,  8, 16, 15,  7, 12,  0,  4,  5, 12,  2, 14,\n",
+      "         14,  8, 16, 11,  2, 13,  7,  5, 16,  3,  3,  8,  4,  0, 13,  4],\n",
+      "        [ 0,  0,  1,  1,  2,  2,  3,  3,  4,  4,  5,  5,  6,  6,  7,  7,  8,  8,\n",
+      "          9,  9, 10, 10, 11, 11, 12, 12, 13, 13, 14, 14, 15, 15, 16, 16]]), tensor([[14,  9,  8,  5,  1,  5, 18,  8,  6, 15,  1,  8, 12,  7, 12,  6,  1,  5,\n",
+      "         14, 17, 17,  6, 13, 16,  6,  7, 11, 16,  9,  0,  4,  6, 11, 13,  9, 14,\n",
+      "          0, 14, 15,  2],\n",
+      "        [ 0,  0,  1,  1,  2,  2,  3,  3,  4,  4,  5,  5,  6,  6,  7,  7,  8,  8,\n",
+      "          9,  9, 10, 10, 11, 11, 12, 12, 13, 13, 14, 14, 15, 15, 16, 16, 17, 17,\n",
+      "         18, 18, 19, 19]])]\n"
      ]
     }
    ],
@@ -113,38 +128,89 @@
     "    labels.append([node_features[i][0].mean(), node_features[i][1].mean()])\n",
     "    node_features[i] = torch.Tensor(np.transpose(node_features[i]))\n",
     "    edges.append(knn_graph(torch.Tensor(np.transpose(node_features[i])), num_edges))\n",
-    "node_features = torch.Tensor(node_features)\n",
-    "print(len(labels), len(node_features), len(edges))"
+    "#node_features = torch.Tensor(node_features)\n",
+    "#torch does not allow to stack variable size tensors\n",
+    "#test = torch.nested.nested_tensor([node_features])\n",
+    "print(len(labels), len(node_features), len(edges))\n",
+    "print(edges)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "id": "33d68e00-aa07-41fe-8592-0453f9bab96f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#node_features[0].item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d0e07238",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'item'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_140294/845481914.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnode_features\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'item'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[tensor([[0.5050, 0.3038, 0.8525, 0.5769, 0.6836, 0.1515, 0.4946, 0.0449, 0.6816,\n",
+      "         0.4904, 0.9349, 0.8749, 0.1747, 0.7135, 0.5116, 0.6588, 0.7093],\n",
+      "        [0.7701, 0.4587, 0.2660, 0.3855, 0.7306, 0.0800, 0.6998, 0.1697, 0.2374,\n",
+      "         0.0160, 0.6307, 0.3978, 0.2469, 0.5316, 0.2815, 0.8707, 0.5917]]), tensor([[0.3079, 0.1274, 0.3609, 0.0213, 0.5915, 0.1007, 0.7687, 0.8228, 0.0808,\n",
+      "         0.3756, 0.5951, 0.1404, 0.8924, 0.0928, 0.3617, 0.7793, 0.1990, 0.4158,\n",
+      "         0.2455, 0.7424],\n",
+      "        [0.7994, 0.5465, 0.4460, 0.8383, 0.6641, 0.4689, 0.8040, 0.9672, 0.5566,\n",
+      "         0.8367, 0.9150, 0.1852, 0.8319, 0.2213, 0.8204, 0.5355, 0.1512, 0.8564,\n",
+      "         0.9207, 0.2634]])], [tensor([[ 6,  4, 12, 14, 11,  8, 14,  8, 16, 15,  7, 12,  0,  4,  5, 12,  2, 14,\n",
+      "         14,  8, 16, 11,  2, 13,  7,  5, 16,  3,  3,  8,  4,  0, 13,  4],\n",
+      "        [ 0,  0,  1,  1,  2,  2,  3,  3,  4,  4,  5,  5,  6,  6,  7,  7,  8,  8,\n",
+      "          9,  9, 10, 10, 11, 11, 12, 12, 13, 13, 14, 14, 15, 15, 16, 16]]), tensor([[14,  9,  8,  5,  1,  5, 18,  8,  6, 15,  1,  8, 12,  7, 12,  6,  1,  5,\n",
+      "         14, 17, 17,  6, 13, 16,  6,  7, 11, 16,  9,  0,  4,  6, 11, 13,  9, 14,\n",
+      "          0, 14, 15,  2],\n",
+      "        [ 0,  0,  1,  1,  2,  2,  3,  3,  4,  4,  5,  5,  6,  6,  7,  7,  8,  8,\n",
+      "          9,  9, 10, 10, 11, 11, 12, 12, 13, 13, 14, 14, 15, 15, 16, 16, 17, 17,\n",
+      "         18, 18, 19, 19]])], [[tensor(0.6375), tensor(0.3812)], [tensor(0.5536), tensor(0.3369)]]]\n"
      ]
     }
    ],
    "source": [
-    "node_features.item()"
+    "#print(node_features)\n",
+    "test = ak.Array(node_features)\n",
+    "#raw_data = ([ ak.Array(node_features), ak.Array(edges), ak.Array(labels) ])\n",
+    "raw_data = ([node_features, edges, labels])\n",
+    "print(raw_data)\n",
+    "\n",
+    "#graph_data = []\n",
+    "#for graph in raw_data[0]:\n",
+    "#    graph_data.append(Data(x=graph[0], edge_index=graph[1], y=graph[2]))\n",
+    "\n",
+    "#print(graph_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "9ef6189d-4a86-4652-a958-1478787038ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 2 dimensions. The detected shape was (3, 2) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m raw_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mtranspose([node_features, edges, labels])\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mlen\u001b[39m(raw_data)\n\u001b[1;32m      4\u001b[0m graph_data \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mtranspose\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m/nfs/dust/cms/user/lbenato/anaconda3/lib/python3.11/site-packages/numpy/core/fromnumeric.py:668\u001b[0m, in \u001b[0;36mtranspose\u001b[0;34m(a, axes)\u001b[0m\n\u001b[1;32m    601\u001b[0m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_transpose_dispatcher)\n\u001b[1;32m    602\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtranspose\u001b[39m(a, axes\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    603\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    604\u001b[0m \u001b[38;5;124;03m    Returns an array with axes transposed.\u001b[39;00m\n\u001b[1;32m    605\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    666\u001b[0m \n\u001b[1;32m    667\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 668\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapfunc(a, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtranspose\u001b[39m\u001b[38;5;124m'\u001b[39m, axes)\n",
+      "File \u001b[0;32m/nfs/dust/cms/user/lbenato/anaconda3/lib/python3.11/site-packages/numpy/core/fromnumeric.py:54\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     52\u001b[0m bound \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(obj, method, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m bound \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     57\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m bound(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
+      "File \u001b[0;32m/nfs/dust/cms/user/lbenato/anaconda3/lib/python3.11/site-packages/numpy/core/fromnumeric.py:43\u001b[0m, in \u001b[0;36m_wrapit\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[1;32m     42\u001b[0m     wrap \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(asarray(obj), method)(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m wrap:\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(result, mu\u001b[38;5;241m.\u001b[39mndarray):\n",
+      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 2 dimensions. The detected shape was (3, 2) + inhomogeneous part."
+     ]
+    }
+   ],
    "source": [
     "raw_data = np.transpose([node_features, edges, labels])\n",
     "\n",
@@ -457,9 +523,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mds_regression2",
+   "display_name": "mds_regression",
    "language": "python",
-   "name": "mds_regression2"
+   "name": "mds_regression"
   },
   "language_info": {
    "codemirror_mode": {
@@ -471,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
